--- a/Blog App/Views/Home/Index.cshtml
+++ b/Blog App/Views/Home/Index.cshtml
@@ -2,7 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h1 class="display-4 mb-5">Welcome to My Blog!</h1>
+            <p class="lead">Thank you for visiting my blog. Here, I share my thoughts on various topics related to technology, programming, and personal development.</p>
+            <p class="lead">Feel free to explore my blog and leave a comment if you find something interesting.</p>
+            <a href="/Blog" class="btn btn-primary btn-lg mt-5">Explore My Blog</a>
+        </div>
+    </div>
 </div>
