--- a/Blog App/Views/Blog/Index.cshtml
+++ b/Blog App/Views/Blog/Index.cshtml
@@ -39,21 +39,27 @@
         color: #fff;
     }
 </style>
-
-@if (Model.Count == 0  )
+@if (Model == null)
 {
-    <p>There are no blog posts to display.</p>
+    <p>No blog posts found.</p>
 }
 else
 {
     <div class="row">
-        @foreach (var post in Model )
+        @foreach (var post in Model)
         {
             <div class="col-md-4">
                 <div class="blog-post">
                     <h2><a href="@Url.Action("Details", "Blog", new { id = post.Id })">@post.Title</a></h2>
-                    <p>@post.DisplayedDate</p>
+                    <p>@post.PostedOn</p>
                     <span>by: @post.Author.Name</span>
+                    <span>
+                        Categories:
+                        @foreach (var category in post.Categories)
+                        {
+                            <a href="@Url.Action("Index", "Blog", new { category = category.Name })">@category.Name</a>
+                        }
+                    </span>
                     <hr>
                     <p>@post.Content</p>
                     <a href="@Url.Action("Edit", "Blog", new { id = post.Id })" class="btn btn-primary">Edit</a>
@@ -63,5 +69,5 @@ else
         }
     </div>
 }
-
+<br />
 <a href="/Blog/Create" class="btn btn-primary">Create New Post</a>
