--- a/Blog App/Views/Blog/Delete.cshtml
+++ b/Blog App/Views/Blog/Delete.cshtml
@@ -6,8 +6,9 @@
 
 <p>Are you sure you want to delete this post?</p>
 
-<form asp-action="Delete" method="post">
+<form asp-action="DeleteConfirmed" method="post">
     <input type="hidden" name="id" value="@Model.Id" />
     <input type="submit" value="Delete" class="btn btn-danger" />
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
 </form>
+
