--- a/Blog App/Views/Blog/Details.cshtml
+++ b/Blog App/Views/Blog/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model BLOG.BLL.Models.BlogPostViewModel
+﻿@model BLOG.BLL.Models.BlogPostViewModel
 
 <h1>@Model.Title</h1>
 <p>Published on: @Model.PostedOn </p>
@@ -10,8 +10,7 @@
 
 @if (Model.Categories != null)
 {
-    <p>Category: @Model.Categories.Name </p>
+    <p>Categories: @string.Join(", ", Model.Categories.Select(c => c.Name))</p>
 }
 
 <p>@Model.Content</p>
-*@
