--- a/Blog App/Views/Home/Index.cshtml
+++ b/Blog App/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 text-center">
-            <h1 class="display-4 mb-5">Welcome to My Blog!</h1>
-            <p class="lead">Thank you for visiting my blog. Here, I share my thoughts on various topics related to technology, programming, and personal development.</p>
-            <p class="lead">Feel free to explore my blog and leave a comment if you find something interesting.</p>
-            <a href="/Blog" class="btn btn-primary btn-lg mt-5">Explore My Blog</a>
+            <h1 class="display-4 mb-5">Welcome to My Journal App!</h1>
+            <p class="lead">Thank you for visiting my journal. Here, I share my thoughts on various topics related to technology, programming, and personal development.</p>
+            <p class="lead">Feel free to explore my journal and leave a comment if you find something interesting.</p>
+            <a href="/Blog" class="btn btn-primary btn-lg mt-5">Explore My Journal</a>
         </div>
     </div>
 </div>
